# people_detector_vision

./: .gitignore  README.md  requirements.txt  test_mediapipe.py
app/qt/qt_people_detector/: CMakeLists.txt  Info.plist  mainwindow.cpp  mainwindow.h
app/qt/qt_people_detector/vision/: HumanDetector.cpp  HumanDetector.h
backend/api/: app.py  config.py  routes.py
backend/detection/: detector.py  hog_opencv.py
backend/services/: alert_service.py  pose_service.py  telegram_service.py
desktop_app/: CMakeLists.txt  main.cpp
desktop_app/detector/: hog_detector.cpp  hog_detector.h
desktop_app/sender/: rest_client.cpp  rest_client.h
desktop_app/src/: main.cpp
desktop_app/src/camera/: camera.cpp  camera.hpp
desktop_app/src/metrics/: metrics.cpp  metrics.hpp
desktop_app/src/network/: api_client.cpp  api_client.hpp
desktop_app/src/ui/: overlay.cpp  overlay.hpp
desktop_app/src/utils/: image_utils.cpp  image_utils.hpp
desktop_app/utils/: metrics.cpp  metrics.h
docs/: environment.md
docs/figures/: README.md
docs/references/: README.md
docs/reports/: README.md
integration/telegram/: app.py  config.py  requirements.txt  telegram_client.py
models/hog_svm/: metadata.txt
project_root/: requirements.txt
project_root/data_preparation/: augment_data.py  extract_frames.py
project_root/hog_svm/: detect_image.py  detect_video.py  train_hog_svm.py
project_root/telegram_bot/: api.py  bot.py  bot_sender.py  config.py  pose_image_mediapipe.py  pose_video_mediapipe.py
scripts/: README_MULTI.md  extract_negative.py
training/: __init__.py
training/hog_svm/: __init__.py  detect_image.py  detect_video.py  hog_svm_model.pkl  train_hog_svm.py
training/posture/: __init__.py  evaluate.py  extract_keypoints.py  train_classifier.py
